Scratch that. Just set the locale in the notebook

--- a/cooler_cli.ipynb
+++ b/cooler_cli.ipynb
@@ -20,6 +20,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# before we start, set the system locale\n",
+    "import os\n",
+    "os.environ['LC_ALL'] = 'C.UTF-8'\n",
+    "os.environ['LANG'] = 'C.UTF-8'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
