No need to set locale anymore

--- a/cooler_cli.ipynb
+++ b/cooler_cli.ipynb
@@ -20,20 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# before we start, set the system locale\n",
-    "import os\n",
-    "os.environ['LC_ALL'] = 'C.UTF-8'\n",
-    "os.environ['LANG'] = 'C.UTF-8'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -651,7 +637,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "cooler show -b --out test.png --dpi 200 test.cool 3:0-80,000,000"
+    "cooler show --out test.png --dpi 200 test.cool 3:0-80,000,000"
    ]
   },
   {
@@ -691,7 +677,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "cooler show -b --out test2.png --dpi 200 data/Rao2014-GM12878-MboI-allreps-filtered.1000kb.cool chr3:0-80,000,000"
+    "cooler show --out test2.png --dpi 200 data/Rao2014-GM12878-MboI-allreps-filtered.1000kb.cool chr3:0-80,000,000"
    ]
   },
   {
