--- a/cooler_cli.ipynb
+++ b/cooler_cli.ipynb
@@ -38,8 +38,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:39.906466Z",
-     "start_time": "2017-04-29T09:55:38.840223Z"
+     "end_time": "2017-04-29T10:13:08.202515Z",
+     "start_time": "2017-04-29T10:13:07.202694Z"
     }
    },
    "outputs": [
@@ -91,8 +91,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:40.927643Z",
-     "start_time": "2017-04-29T09:55:39.907986Z"
+     "end_time": "2017-04-29T10:13:09.187316Z",
+     "start_time": "2017-04-29T10:13:08.203940Z"
     }
    },
    "outputs": [
@@ -139,8 +139,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:41.943044Z",
-     "start_time": "2017-04-29T09:55:40.929030Z"
+     "end_time": "2017-04-29T10:13:10.202954Z",
+     "start_time": "2017-04-29T10:13:09.189240Z"
     }
    },
    "outputs": [
@@ -149,17 +149,17 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"id\": null,\n",
-      "    \"format-version\": 2,\n",
-      "    \"nbins\": 3114,\n",
       "    \"format-url\": \"https://github.com/mirnylab/cooler\",\n",
-      "    \"nchroms\": 25,\n",
-      "    \"genome-assembly\": \"hg19\",\n",
+      "    \"format-version\": 2,\n",
       "    \"bin-size\": 1000000,\n",
-      "    \"creation-date\": \"2016-02-25T21:05:29.075865\",\n",
-      "    \"library-version\": \"0.3.0\",\n",
+      "    \"nnz\": 4150156,\n",
+      "    \"nchroms\": 25,\n",
       "    \"bin-type\": \"fixed\",\n",
-      "    \"nnz\": 4150156\n",
+      "    \"genome-assembly\": \"hg19\",\n",
+      "    \"id\": null,\n",
+      "    \"library-version\": \"0.3.0\",\n",
+      "    \"nbins\": 3114,\n",
+      "    \"creation-date\": \"2016-02-25T21:05:29.075865\"\n",
       "}\n"
      ]
     }
@@ -175,8 +175,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:42.944218Z",
-     "start_time": "2017-04-29T09:55:41.944737Z"
+     "end_time": "2017-04-29T10:13:11.216638Z",
+     "start_time": "2017-04-29T10:13:10.204311Z"
     }
    },
    "outputs": [
@@ -199,8 +199,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:43.963357Z",
-     "start_time": "2017-04-29T09:55:42.945701Z"
+     "end_time": "2017-04-29T10:13:12.225984Z",
+     "start_time": "2017-04-29T10:13:11.218677Z"
     }
    },
    "outputs": [
@@ -209,39 +209,39 @@
      "output_type": "stream",
      "text": [
       "{\n",
+      "    \"cell-type\": \"GM12878\",\n",
       "    \"species\": \"Homo sapiens\",\n",
       "    \"publication\": \"\",\n",
+      "    \"sex\": \"F\",\n",
+      "    \"enzyme\": \"MboI\",\n",
       "    \"QC\": {\n",
-      "        \"pre-filtering\": {\n",
-      "            \"unused\": 0,\n",
-      "            \"double-sided\": 3390352656,\n",
-      "            \"total\": 5332721651,\n",
-      "            \"single-sided\": 1942368995\n",
-      "        },\n",
       "        \"double-sided\": {\n",
       "            \"valid\": 3147639590,\n",
-      "            \"filtered-valid\": {\n",
-      "                \"removed-outlier-fragment\": 151337031,\n",
-      "                \"removed-large-small-pair\": 657466,\n",
-      "                \"removed-duplicate\": 110650005,\n",
-      "                \"removed-start-near-rsite\": \"\"\n",
-      "            },\n",
-      "            \"total\": 3390352656,\n",
       "            \"filtered-invalid\": {\n",
       "                \"removed-self-circles\": 1741768,\n",
       "                \"removed-dangling-ends\": 234897003,\n",
       "                \"removed-error-pair\": 6074295\n",
+      "            },\n",
+      "            \"total\": 3390352656,\n",
+      "            \"filtered-valid\": {\n",
+      "                \"removed-outlier-fragment\": 151337031,\n",
+      "                \"removed-start-near-rsite\": \"\",\n",
+      "                \"removed-large-small-pair\": 657466,\n",
+      "                \"removed-duplicate\": 110650005\n",
       "            }\n",
       "        },\n",
       "        \"post-filtering\": {\n",
-      "            \"trans\": 799284061,\n",
       "            \"total\": 2884995088,\n",
+      "            \"trans\": 799284061,\n",
       "            \"cis\": 2085711027\n",
+      "        },\n",
+      "        \"pre-filtering\": {\n",
+      "            \"double-sided\": 3390352656,\n",
+      "            \"single-sided\": 1942368995,\n",
+      "            \"unused\": 0,\n",
+      "            \"total\": 5332721651\n",
       "        }\n",
-      "    },\n",
-      "    \"cell-type\": \"GM12878\",\n",
-      "    \"sex\": \"F\",\n",
-      "    \"enzyme\": \"MboI\"\n",
+      "    }\n",
       "}\n"
      ]
     }
@@ -281,8 +281,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:43.974483Z",
-     "start_time": "2017-04-29T09:55:43.965162Z"
+     "end_time": "2017-04-29T10:13:12.237448Z",
+     "start_time": "2017-04-29T10:13:12.227629Z"
     }
    },
    "outputs": [
@@ -323,8 +323,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:44.184669Z",
-     "start_time": "2017-04-29T09:55:43.976443Z"
+     "end_time": "2017-04-29T10:13:12.434746Z",
+     "start_time": "2017-04-29T10:13:12.239187Z"
     }
    },
    "outputs": [
@@ -378,8 +378,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:45.320917Z",
-     "start_time": "2017-04-29T09:55:44.186078Z"
+     "end_time": "2017-04-29T10:13:13.526431Z",
+     "start_time": "2017-04-29T10:13:12.436325Z"
     }
    },
    "outputs": [
@@ -421,8 +421,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:46.330277Z",
-     "start_time": "2017-04-29T09:55:45.322966Z"
+     "end_time": "2017-04-29T10:13:14.549304Z",
+     "start_time": "2017-04-29T10:13:13.528992Z"
     }
    },
    "outputs": [
@@ -460,8 +460,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:47.439673Z",
-     "start_time": "2017-04-29T09:55:46.331923Z"
+     "end_time": "2017-04-29T10:13:15.614252Z",
+     "start_time": "2017-04-29T10:13:14.551077Z"
     }
    },
    "outputs": [
@@ -508,10 +508,10 @@
     "\n",
     "What does it do? \n",
     "\n",
-    "Given a chromosome order, it makes the pairs:\n",
+    "Given a chromosome order, it creates a new pairs file with the following properties:\n",
     "\n",
-    "1. _Consistently ordered mates_: mates of every interchromsomal pair are properly \"flipped\" in order to respect the requested order of the chromosomes.\n",
-    "2. _Sorted_: once oriented, the reads are lexically sorted by chrom1, chrom2, pos1, pos2. (a.k.a. \"block\" sorting)\n",
+    "1. _Consistently ordered mates_: mates of every interchromsomal pair are properly \"flipped\" in order to respect the requested order of the chromosomes. For intrachromosomal pairs, mates are flipped such that `pos1` is always less than or equal to `pos2`. As a result, the data will have an **upper triangular** orientation with respect to the chromosome order (interpreting sides 1 and 2 as `i` and `j` axes in a matrix coordinate system).\n",
+    "2. _Sorted_: once the mates are oriented, the pair records are lexically sorted by chrom1, chrom2, pos1, pos2. With (1) and (2), contacts are said to be sorted by chromosome-chromosome block, a.k.a. \"block\" sorted.\n",
     "3. _Indexed_: we use [bgzip](http://www.htslib.org/doc/tabix.html) to compress the file and [Pairix](https://github.com/4dn-dcic/pairix) to index it. This creates a small `.px2` index file which facilitates 2-dimensional queries on the reads. \n",
     "\n",
     "\\* **New in v0.7**: Prior to Pairix, we used [Tabix](http://www.htslib.org/doc/tabix.html) to index pairs files. Because Tabix only indexes along one genomic coordinate dimension, we used a different lexical sorting order (chrom1, pos1, chrom2, pos2) to produce Tabix files in order to obtain random access to any range of contacts along the \"row\" axis of the contact map. We still support preparing this kind of pairs file with the `--index tabix` option, but we recommend using Pairix instead if possible.\n",
@@ -528,8 +528,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:48.546012Z",
-     "start_time": "2017-04-29T09:55:47.441750Z"
+     "end_time": "2017-04-29T10:13:16.724589Z",
+     "start_time": "2017-04-29T10:13:15.615925Z"
     }
    },
    "outputs": [
@@ -616,8 +616,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:51.220704Z",
-     "start_time": "2017-04-29T09:55:48.549226Z"
+     "end_time": "2017-04-29T10:13:19.371360Z",
+     "start_time": "2017-04-29T10:13:16.726223Z"
     }
    },
    "outputs": [
@@ -679,8 +679,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:51.234893Z",
-     "start_time": "2017-04-29T09:55:51.222897Z"
+     "end_time": "2017-04-29T10:13:19.384945Z",
+     "start_time": "2017-04-29T10:13:19.373356Z"
     }
    },
    "outputs": [
@@ -726,9 +726,7 @@
     "A Pairix-indexed file has the advantage of 2D querying. However, it uses a slightly different sorting convention:\n",
     "\n",
     "1. Like the previous Tabix scheme, interchromosomal pairs in Pairix files should consistently respect some order of the chromosomes (i.e. be \"upper triangular\"). Unlike the previous scheme, the chromosome order used to create the pairs file can be arbitrary, and does not need to match the order you wish to use in the cooler file.\n",
-    "2. Unlike the previous Tabix scheme, where the file is sorted by `chrom1`, `pos1`, `chrom2`, `pos2`, Pairix files are sorted by `chrom1`, `chrom2`, `pos1`, `pos2`. \n",
-    "\n",
-    "With (1) and (2), contacts are said to be sorted by chromosome-chromosome block, or block-sorted."
+    "2. Unlike the previous Tabix scheme, where the file is sorted by `chrom1`, `pos1`, `chrom2`, `pos2`, Pairix files are sorted by `chrom1`, `chrom2`, `pos1`, `pos2`. \n"
    ]
   },
   {
@@ -736,8 +734,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:52.412996Z",
-     "start_time": "2017-04-29T09:55:51.236884Z"
+     "end_time": "2017-04-29T10:13:20.509834Z",
+     "start_time": "2017-04-29T10:13:19.386684Z"
     }
    },
    "outputs": [
@@ -782,8 +780,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:56.672483Z",
-     "start_time": "2017-04-29T09:55:52.415021Z"
+     "end_time": "2017-04-29T10:13:24.397782Z",
+     "start_time": "2017-04-29T10:13:20.511470Z"
     },
     "scrolled": false
    },
@@ -799,28 +797,28 @@
       "INFO:cooler:Writing pixels\n",
       "INFO:cooler:8\n",
       "INFO:cooler:7\n",
-      "INFO:cooler:5\n",
       "INFO:cooler:6\n",
+      "INFO:cooler:5\n",
       "INFO:cooler:4\n",
       "INFO:cooler:3\n",
+      "INFO:cooler:9\n",
       "INFO:cooler:13\n",
       "INFO:cooler:2\n",
       "INFO:cooler:10\n",
-      "INFO:cooler:9\n",
+      "INFO:cooler:14\n",
+      "INFO:cooler:1\n",
       "INFO:cooler:11\n",
       "INFO:cooler:12\n",
-      "INFO:cooler:1\n",
+      "INFO:cooler:21\n",
+      "INFO:cooler:22\n",
+      "INFO:cooler:20\n",
       "INFO:cooler:19\n",
       "INFO:cooler:18\n",
-      "INFO:cooler:14\n",
-      "INFO:cooler:17\n",
-      "INFO:cooler:20\n",
-      "INFO:cooler:15\n",
-      "INFO:cooler:Y\n",
-      "INFO:cooler:21\n",
-      "INFO:cooler:MT\n",
       "INFO:cooler:16\n",
-      "INFO:cooler:22\n",
+      "INFO:cooler:Y\n",
+      "INFO:cooler:17\n",
+      "INFO:cooler:15\n",
+      "INFO:cooler:MT\n",
       "INFO:cooler:X\n",
       "INFO:cooler:Writing indexes\n",
       "INFO:cooler:Writing info\n",
@@ -858,8 +856,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:57.686519Z",
-     "start_time": "2017-04-29T09:55:56.674569Z"
+     "end_time": "2017-04-29T10:13:25.405603Z",
+     "start_time": "2017-04-29T10:13:24.399490Z"
     }
    },
    "outputs": [
@@ -929,8 +927,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:58.702694Z",
-     "start_time": "2017-04-29T09:55:57.688415Z"
+     "end_time": "2017-04-29T10:13:26.418063Z",
+     "start_time": "2017-04-29T10:13:25.408458Z"
     }
    },
    "outputs": [
@@ -977,8 +975,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:55:59.642862Z",
-     "start_time": "2017-04-29T09:55:58.704451Z"
+     "end_time": "2017-04-29T10:13:27.367343Z",
+     "start_time": "2017-04-29T10:13:26.419472Z"
     }
    },
    "outputs": [
@@ -1010,8 +1008,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:00.607271Z",
-     "start_time": "2017-04-29T09:55:59.644709Z"
+     "end_time": "2017-04-29T10:13:28.353809Z",
+     "start_time": "2017-04-29T10:13:27.368742Z"
     }
    },
    "outputs": [
@@ -1043,8 +1041,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:01.588418Z",
-     "start_time": "2017-04-29T09:56:00.609768Z"
+     "end_time": "2017-04-29T10:13:29.348595Z",
+     "start_time": "2017-04-29T10:13:28.355372Z"
     }
    },
    "outputs": [
@@ -1076,8 +1074,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:02.638973Z",
-     "start_time": "2017-04-29T09:56:01.590313Z"
+     "end_time": "2017-04-29T10:13:30.552926Z",
+     "start_time": "2017-04-29T10:13:29.350306Z"
     }
    },
    "outputs": [
@@ -1109,8 +1107,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:03.641274Z",
-     "start_time": "2017-04-29T09:56:02.640472Z"
+     "end_time": "2017-04-29T10:13:31.705635Z",
+     "start_time": "2017-04-29T10:13:30.555081Z"
     }
    },
    "outputs": [
@@ -1164,8 +1162,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:04.645221Z",
-     "start_time": "2017-04-29T09:56:03.642724Z"
+     "end_time": "2017-04-29T10:13:32.844273Z",
+     "start_time": "2017-04-29T10:13:31.707613Z"
     }
    },
    "outputs": [
@@ -1239,8 +1237,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:06.256954Z",
-     "start_time": "2017-04-29T09:56:04.646770Z"
+     "end_time": "2017-04-29T10:13:34.416590Z",
+     "start_time": "2017-04-29T10:13:32.845816Z"
     }
    },
    "outputs": [
@@ -1278,8 +1276,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:07.291268Z",
-     "start_time": "2017-04-29T09:56:06.258521Z"
+     "end_time": "2017-04-29T10:13:35.380275Z",
+     "start_time": "2017-04-29T10:13:34.418135Z"
     }
    },
    "outputs": [
@@ -1325,8 +1323,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:08.476134Z",
-     "start_time": "2017-04-29T09:56:07.292554Z"
+     "end_time": "2017-04-29T10:13:36.376361Z",
+     "start_time": "2017-04-29T10:13:35.381975Z"
     }
    },
    "outputs": [
@@ -1401,8 +1399,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:10.555375Z",
-     "start_time": "2017-04-29T09:56:08.477903Z"
+     "end_time": "2017-04-29T10:13:38.338520Z",
+     "start_time": "2017-04-29T10:13:36.377989Z"
     }
    },
    "outputs": [
@@ -1426,8 +1424,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:10.583041Z",
-     "start_time": "2017-04-29T09:56:10.557199Z"
+     "end_time": "2017-04-29T10:13:38.356731Z",
+     "start_time": "2017-04-29T10:13:38.340274Z"
     }
    },
    "outputs": [
@@ -1460,8 +1458,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:12.978164Z",
-     "start_time": "2017-04-29T09:56:10.585301Z"
+     "end_time": "2017-04-29T10:13:40.439441Z",
+     "start_time": "2017-04-29T10:13:38.358128Z"
     },
     "collapsed": true
    },
@@ -1477,8 +1475,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-29T09:56:12.987552Z",
-     "start_time": "2017-04-29T09:56:12.980644Z"
+     "end_time": "2017-04-29T10:13:40.450093Z",
+     "start_time": "2017-04-29T10:13:40.441022Z"
     }
    },
    "outputs": [
