--- a/cooler_cli.ipynb
+++ b/cooler_cli.ipynb
@@ -704,6 +704,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c bioconda pairix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-23T03:02:43.048186Z",
